--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <html>
-    <head>
-        <title> Meu Site</title>
-        <link rel="stylesheet" href="estilos.css">
-    </head>
-    <body>
-        <h1>Aprendendo a porra do GIT HUB</h1>
-    </body>
+    <title> Site do Cumba</title>
+    <link rel="stylesheet" href="estilos.css">
+</head>
+<body>
+    <h1>Aprendendo GitHub</h1>
+    <h2>Bem vindo ao meu site</h2>
+    <h3>Felipe Cumba</h3>
+  </body>
+</html>
+
+
+
+
+
+
+
+
 </html>
